# ffi-experiments

./: .gitignore  BuildLua.sh  DependencyControl.json  DependencyControl.template.json  Makefile  meson.build  meson_options.txt  readme.md
.github/workflows/: ci.yml
bad-mutex/: BadMutex.cpp  BadMutex.hpp  BadMutex.moon  BadMutexC.cpp  BadMutexC.h  Makefile  meson.build  preproclua.sh
bad-mutex/BadMutex/BadMutex/: BadMutex.vcxproj
download-manager/: DownloadManager.cpp  Downloader.cpp  Downloader.hpp  meson.build  sha1.c  sha1.h
precise-timer/: Makefile  PreciseTimer.cpp  PreciseTimer.hpp  PreciseTimer.moon  PreciseTimerC.cpp  PreciseTimerC.h  meson.build  preproclua.sh
precise-timer/PreciseTimer/PreciseTimer/: PreciseTimer.vcxproj
requireffi/: meson.build  requireffi.moon
subprojects/: curl.wrap
threaded-libcurl/: DebugLog.h  DownloadManager.cpp  DownloadManager.hpp  DownloadManager.moon  DownloadManagerC.cpp  DownloadManagerC.h  Downloader.cpp  Downloader.hpp  Makefile  WinCompat.h  meson.build  preproclua.sh  sha1.c
threaded-libcurl/DownloadManager/DownloadManager/: DownloadManager.vcxproj
